modified:   .env.template 	new file:   package-lock.json

--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,10 @@
 NODE_ENV="development"
 # Shopify
-SESSION_SECRET="foobar"
-PUBLIC_STORE_DOMAIN="fluid-demo.myshopify.com"
-PUBLIC_STOREFRONT_API_TOKEN="046fc93a591ca78ec9dc34657b660ac6"
-PRIVATE_STOREFRONT_API_TOKEN="shpat_•••••••••••••••••••••••••"
-PUBLIC_STOREFRONT_ID="22227"
+SESSION_SECRET="HjKtFGbNwQLZpRSY"
+PUBLIC_STORE_DOMAIN="idempire.us"
+PUBLIC_STOREFRONT_API_TOKEN="d746612df5591faf92ce10fe1aa52e6b"
+PRIVATE_STOREFRONT_API_TOKEN="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"
+PUBLIC_STOREFRONT_ID="IDEmpire"
 PUBLIC_STOREFRONT_API_VERSION="2024-01"
 
 # Sanity project ID
